build: explicitly define `immutables` annotation processor
Instead of using `-proc:full`, we can be explicit about it and configure
just the one processor we actually need.

(cherry picked from commit 954d5bd4eed51134a0231a68bef41c951d0e4bc4)